--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Intoduction to CSS</title>
+    <link rel="stylesheet" href="/july-2025-introduction-to-css-Rodah-chep/styles.css">
+</head>
+<body>
+    <header>
+        <h1>Introduction to CSS</h1>
+        <nav class="navigation">
+            <ul>
+                <li><a href="#main-content">Home</a></li>
+                <li><a href="#inline-styling">Inline Styling</a></li>
+                <li><a href="#internal-styling">Internal Styling</a></li>
+                <li><a href="#external-styling">External Styling</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main id="main-content">
+        <section id="Home">
+    <h1>CSS Styling</h1>
+    <p>Welcome to the Introduction to CSS course! In this course, you will learn how to style your web pages using CSS.</p>
+    <p>CSS stands for Cascading Style Sheets and is used to control the layout and appearance of HTML elements. With CSS, you can change colors, fonts, spacing, and much more.</p>
+    <p>No crying in Web development</p>
+    </section>
+    
+    <!--Types of CSS Styling-->
+    <section id="Inline-Styling">
+    <h2>Inline Syling</h2>
+    <p style="color: blue; font-size: 20px;">This is an example of inline styling.</p>
+    </section>
 
+    <section id="Internal Styling">
+    <h2>Internal Styling</h2>
+    <p class="internal-style">This is an example of internal styling.</p>
+    </section>
+
+    <section id="External Styling">
+    <h2>External Styling</h2>
+    <p class="external-style">This is an example of external styling: Class selector</p>
+    <p id="external-style">This is and example of id selector</p>
+    </section>
+
+    </main>
+</body>
+</html>
